# UmbraVOX

./: .gitignore  AGENTS.md  CHANGELOG.txt  LEGAL-NOTICE.md  LICENSE  Makefile  NOTICE  README.md  TODO-DEFERRED.txt  TODO.txt  UmbraVox.cabal  cabal.project  cabal.project.freeze  flake.nix  result  shell-minimal.nix  shell.nix  test-quick.hs  test_list_init.fst  umbravox.tix  uv  vm-network-policy.conf
.github/workflows/: builder-image.yml  ci-linux.yml  ci-macos.yml  ci-nightly.yml  ci-prerelease.yml  ci-windows.yml  release.yml  seed-image.yml
app/: Headless.hs  Main.hs
app-umbraclaw/: Main.hs
app/codegen/: CBORGen.hs  CryptoGen.hs  Main.hs
app/signal-bridge/: Main.hs
app/umbravox/: Main.hs
attic/: 01-overview.md  DO-178C-COVERAGE.md  MCDC-TABLES.md  persistence-model.md
attic/doc-legacy-2026-04-28/: 01-overview.md  09-network.md  ARCHITECTURE.md  QUICKSTART.md  README.md  mvp-plan.md
attic/pre-uv/: RELEASE-LANES.md
codegen/: CBORGen.hs  CryptoGen.hs  FSMGen.hs  Main.hs  TestGen.hs
codegen/Specs/: Dandelion.spec  Ed25519Extended.spec  HKDF.spec  HMAC.spec  Keccak.spec  MessageFormat.spec  NetworkProtocol.spec  PQWrapper.spec  Poly1305.spec  SHA256.spec  WireFormat.spec
conf/: vm-builder-network-policy.conf  vm-network-policy.conf
contrib/oracles/: THIRD_PARTY_LICENSES.md  vm-kyber-oracle.nix  vm-libsignal-protocol-oracle.nix  vm-primitive-oracle-suite.nix
csrc/: constant_time.c  ct_helpers.h  secure_mlock.c  secure_zero.c  sqlite3_shim.c
csrc/entropy/: bridge_entropy.c
csrc/extracted/: README.md
csrc/fiat/: README.md  VENDORING.md  bridge_ed25519.c  bridge_x25519.c  ffi_bridge.h  fiat_25519_64.c  fiat_25519_64.h
csrc/hacl/: Hacl_Chacha20.c  Hacl_Chacha20.h  Hacl_HKDF.c  Hacl_HKDF.h  Hacl_HMAC.c  Hacl_HMAC.h  Hacl_Hash_Base.c  Hacl_Hash_Blake2b.c  Hacl_Hash_Blake2s.c  Hacl_Hash_MD5.c  Hacl_Hash_SHA1.c  Hacl_Hash_SHA2.c  Hacl_Hash_SHA3.c  Hacl_MAC_Poly1305.c  Hacl_MAC_Poly1305.h  Hacl_MAC_Poly1305_Simd128.h  Hacl_MAC_Poly1305_Simd256.h  Hacl_SHA2_256.c  Hacl_SHA2_256.h  Hacl_SHA2_512.c  Hacl_SHA2_512.h  Hacl_SHA3.h  Lib_Memzero0.c  README  README.md  VENDORING.md  bridge_aesgcm.c  bridge_chacha20.c  bridge_chacha20poly1305.c  bridge_hkdf.c  bridge_hmac.c  bridge_keccak.c  bridge_poly1305.c  bridge_sha256.c  bridge_sha512.c  config.h  hacl_fsmath.c  hacl_sha256_portable.c  hacl_sha512_portable.c
doc/: 01-overview.md  03-cryptography.md  06-economics.md  07-message-format.md  09-network.md  19-game-theory.md  20-economic-analysis.md  API-REFERENCE.md  ARCHITECTURE.md  BUILD-PATHS.md  CHANGELOG.txt  CI-INTEGRATION.md  CI-TESTING.md  CRYPTO-ASSUMPTIONS.md  CRYPTO-AUDIT-v0.3.0.md  CRYPTO-SAFETY.md  DHT-NETWORK-PLAN.md  DO-178C-COVERAGE.md  ENCRYPTED-ENVELOPE-DESIGN.md  FSTAR-AXIOM-REGISTRY.md  IMPLEMENTATION-PLAN.md  LICENSING.md  MCDC-TARGETS.md  MILESTONE-DOCS.md  NIX-CACHE-POLICY.md  PLUGIN-AUTHORING.md  PROJECT-CHARTER.md  PROTOCOL-AUDIT-v0.3.0.md  QUICKSTART.md  README.md  RELEASE-LANES.md  RELEASES.md  SBOM.md  SECURITY-AUDIT-v0.6.md  SECURITY-REVIEW-v0.4.1.md  TEST-LEVELS.md  TODO-DEFERRED.txt  TODO.txt  VERIFIED-C.md  VM-DEVELOPMENT.md  (+19 more)
doc/attic/: assurance-roadmap.md  fstar-assume-reduction.md
doc/future/: 11-node-architecture.md  18-performance-analysis.md  21-formal-proofs-index.md  proof-04-token-conservation.md  proof-07-cryptanalysis-resistance.md
doc/hardening/: 11-eclipse-attack-defense.md  13-traffic-analysis-defense.md  15-truncation-security.md  22-network-protocol-security.md  23-treasury-governance.md
nix/: make-disk-image.nix  remote-builder.env  remote-builder.env.example  signal-server-build.nix  signal-server-config.yml  signal-server-secrets.yml  signal-server.json  vm-base.nix  vm-build.env  vm-builder.nix  vm-dragonfly.nix  vm-freebsd.nix  vm-image-aarch64.nix  vm-image.nix  vm-libsignal-protocol-oracle.nix  vm-netbsd.nix  vm-omnios.nix  vm-openbsd.nix  vm-primitive-oracle-suite.nix  vm-runtime.nix  vm-seed.nix  vm-signal-server.nix  vm-test-image.nix  vm-tinycore.nix
nix/oracle-cli/primitive-oracle/: Cargo.toml
nix/oracle-cli/primitive-oracle/src/: main.rs
nix/oracle-cli/protocol-oracle/: Cargo.toml
nix/oracle-cli/protocol-oracle/src/: main.rs
nix/oracles/: ORACLE-SECURITY.md  boringssl-pin.json  hacl-star-pin.json  liboqs-pin.json  libsignal-pin.json  libsodium-pin.json  monocypher-pin.json  pqclean-pin.json  rustcrypto-pin.json  wycheproof-pin.json
nix/tiers/: base.nix  builder.nix  dev.nix  network.nix
plugins/: README.md  providers-README.md
plugins/file-sharing/: manifest.uvx
plugins/group-chat/: manifest.uvx
plugins/image-sharing/: manifest.uvx
plugins/location-sharing/: manifest.uvx
plugins/mastodon/: manifest.uvx
plugins/signal-bridge/: manifest.uvx
plugins/signal-server/: manifest.uvx
plugins/tcp/: manifest.uvx
plugins/template-bridge/: Main.hs  README.md  (+2 more)
providers/: README.md
scripts/: build-wasm.sh  check_complexity.py  ci-overnight-verify.sh  coverage-check.sh  ed25519-assoc-cert-gen.py  ed25519-congruence-cert-gen.py  ed25519-doubling-cert-gen.py  fstar-eval-vectors.sh  gen-dep-graph.sh  lib-release.sh  lib-vm.sh  nix-flake.sh  nix-remote-builder-config.sh  nix-vm-build-config.sh  pre-release-check.sh  primality-certificate.hs  release-gate-assurance.sh  release-lane-firecracker.sh  release-lane-qemu.sh  release-lane-readiness-all.sh  release-lane-readiness-bsd.sh  release-lane-readiness-lib.sh  release-lane-readiness-linux-arm64.sh  release-lane-readiness-linux-x86_64.sh  release-lane-readiness-macos.sh  release-lane-readiness-windows.sh  release-package-platform.sh  release-package.sh  release-reproducibility-check.sh  release-sign.sh  release-smoke-appimage.sh  release-smoke-linux.sh  release-smoke-microvm.sh  release-smoke-qemu-profile.sh  test-coqprime-vm.sh  test-infrastructure.sh  test-make-options.sh  test-offline-parity.sh  test-remote-builder-config.sh  test-remote-builder-wiring.sh  (+29 more)
test/: Main.hs
tools/: go.mod
vm-defs/: builder.yaml  ci-test.yaml  dev.yaml  runtime-fc.yaml  runtime-qemu.yaml  signal-build.yaml  signal-runtime.yaml  tinycore.yaml
(+558 files in other folders)
