cabal-version:      3.0
name:               UmbraVox
version:            0.1.0.0
synopsis:           Decentralized encrypted communications protocol
description:
  UmbraVox is a research-oriented encrypted messaging project with
  post-quantum cryptography, preserved blockchain-facing design work,
  and a Haskell-first runtime backed by handwritten F* formal models.
  The current assurance boundary and trust gaps are documented in
  README.md and doc/assurance-matrix.md.
license:            Apache-2.0
license-file:       LICENSE
build-type:         Simple

flag pure-haskell
  description: Use pure Haskell reference implementations (no FFI C)
  default:     True
  manual:      True

flag profiling
  description: Enable GHC cost-centre profiling annotations
  default:     False
  manual:      True

flag coverage
  description: Enable HPC instrumentation for MC/DC coverage
  default:     False
  manual:      True

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    StrictData
    TypeApplications

library
  import:           warnings, lang
  hs-source-dirs:   src
  exposed-modules:
    -- Crypto primitives
    UmbraVox.Crypto.SHA256
    UmbraVox.Crypto.SHA512
    UmbraVox.Crypto.HMAC
    UmbraVox.Crypto.HKDF
    UmbraVox.Crypto.AES
    UmbraVox.Crypto.GCM
    UmbraVox.Crypto.Curve25519
    UmbraVox.Crypto.Ed25519
    UmbraVox.Crypto.Keccak
    UmbraVox.Crypto.Poly1305
    UmbraVox.Crypto.MLKEM
    UmbraVox.Crypto.VRF
    UmbraVox.Crypto.Random
    UmbraVox.Crypto.ConstantTime
    UmbraVox.Crypto.StealthAddress
    UmbraVox.Crypto.BIP39
    UmbraVox.Crypto.Export
    -- Signal protocol
    UmbraVox.Crypto.Signal.X3DH
    UmbraVox.Crypto.Signal.PQXDH
    UmbraVox.Crypto.Signal.DoubleRatchet
    UmbraVox.Crypto.Signal.SenderKeys
    UmbraVox.Crypto.Signal.Session
    UmbraVox.Crypto.PQWrapper
    UmbraVox.Crypto.KeyStore
    -- Active generated coverage spans the preserved Haskell, C, and FFI
    -- namespaces. Generated C and FFI paths are linked through truthful
    -- bridge wrappers plus compile/link probes.
    UmbraVox.Crypto.Generated.AES256
    UmbraVox.Crypto.Generated.ChaCha20
    UmbraVox.Crypto.Generated.HKDF
    UmbraVox.Crypto.Generated.HMAC
    UmbraVox.Crypto.Generated.Keccak
    UmbraVox.Crypto.Generated.MLKEM768
    UmbraVox.Crypto.Generated.Poly1305
    UmbraVox.Crypto.Generated.SHA256
    UmbraVox.Crypto.Generated.SHA512
    UmbraVox.Crypto.Generated.X25519
    UmbraVox.Crypto.Generated.FFI.AES256
    UmbraVox.Crypto.Generated.FFI.ChaCha20
    UmbraVox.Crypto.Generated.FFI.HKDF
    UmbraVox.Crypto.Generated.FFI.HMAC
    UmbraVox.Crypto.Generated.FFI.Keccak
    UmbraVox.Crypto.Generated.FFI.MLKEM768
    UmbraVox.Crypto.Generated.FFI.Poly1305
    UmbraVox.Crypto.Generated.FFI.SHA256
    UmbraVox.Crypto.Generated.FFI.SHA512
    UmbraVox.Crypto.Generated.FFI.X25519
    -- Consensus
    UmbraVox.Consensus.Types
    UmbraVox.Consensus.Block
    UmbraVox.Consensus.Ledger
    UmbraVox.Consensus.Protocol
    UmbraVox.Consensus.LeaderElection
    UmbraVox.Consensus.Validation
    UmbraVox.Consensus.ForkChoice
    UmbraVox.Consensus.Nonce
    UmbraVox.Consensus.Truncation
    UmbraVox.Consensus.Mempool
    -- Economics
    UmbraVox.Economics.Token
    UmbraVox.Economics.Fees
    UmbraVox.Economics.Rewards
    UmbraVox.Economics.Penalty
    UmbraVox.Economics.Cycle
    UmbraVox.Economics.Onboarding
    -- Network
    UmbraVox.Network.TransportClass
    UmbraVox.Network.Transport
    UmbraVox.Network.Transport.Loopback
    UmbraVox.Network.Transport.Intercept
    UmbraVox.Network.Transport.UDP
    UmbraVox.Network.Transport.Blockchain
    UmbraVox.Network.Transport.SignalServer
    UmbraVox.Network.Transport.XMPP
    UmbraVox.Network.Transport.Discord
    UmbraVox.Network.Transport.Matrix
    UmbraVox.Network.Noise
    UmbraVox.Network.Noise.State
    UmbraVox.Network.Noise.Handshake
    UmbraVox.Network.PeerManager
    UmbraVox.Network.Gossip
    UmbraVox.Network.Dandelion
    UmbraVox.Network.Protocol
    UmbraVox.Network.Sync
    UmbraVox.Network.MDNS
    UmbraVox.Network.PeerExchange
    -- Chat
    UmbraVox.App.RuntimeLog
    UmbraVox.App.Startup
    UmbraVox.Chat.Wire
    UmbraVox.Chat.Session
    UmbraVox.Chat.Message
    UmbraVox.Chat.Transaction
    UmbraVox.Chat.Contacts
    UmbraVox.Chat.API
    -- Storage
    UmbraVox.Storage.ChainDB
    UmbraVox.Storage.StateDB
    UmbraVox.Storage.Index
    UmbraVox.Storage.Checkpoint
    UmbraVox.Storage.Schema
    UmbraVox.Storage.Anthony
    -- Protocol / Serialization
    UmbraVox.Protocol.Encoding
    UmbraVox.Protocol.UTF8
    UmbraVox.Protocol.CBOR
    UmbraVox.Protocol.MessageFormat
    UmbraVox.Protocol.QRCode
    UmbraVox.Protocol.WireFormat
    -- TUI
    UmbraVox.TUI.Types
    UmbraVox.TUI.Constants
    UmbraVox.TUI.Text
    UmbraVox.TUI.PaginatedList
    UmbraVox.TUI.Terminal
    UmbraVox.TUI.Layout
    UmbraVox.TUI.Dialog
    UmbraVox.TUI.Menu
    UmbraVox.TUI.RuntimeCommand
    UmbraVox.TUI.RuntimeEvent
    UmbraVox.TUI.RuntimeNetwork
    UmbraVox.TUI.RuntimeSettings
    UmbraVox.TUI.Render
    UmbraVox.TUI.Input
    UmbraVox.TUI.Actions
    UmbraVox.TUI.Actions.Session
    UmbraVox.TUI.Actions.Export
    UmbraVox.TUI.Handshake
    -- Version
    UmbraVox.Version
    -- Tools
    UmbraVox.Tools.Complexity
    UmbraVox.Tools.FStarVerify
    UmbraVox.Tools.FetchReferences
  build-depends:
    base         >= 4.18  && < 5,
    bytestring   >= 0.11  && < 0.13,
    containers   >= 0.6   && < 0.8,
    array        >= 0.5   && < 0.6,
    stm          >= 2.5   && < 2.6,
    network      >= 3.1   && < 3.3,
    binary       >= 0.8   && < 0.9,
    directory    >= 1.3   && < 1.4,
    filepath     >= 1.4   && < 1.6,
    time         >= 1.12  && < 1.15,
    process      >= 1.6   && < 1.7,
    text         >= 2.0   && < 2.2,
    unix         >= 2.8   && < 2.9
  c-sources:
    csrc/generated/aes256.c
    csrc/generated/chacha20.c
    csrc/generated/hkdf.c
    csrc/generated/hmac.c
    csrc/generated/keccak.c
    csrc/generated/mlkem768.c
    csrc/generated/poly1305.c
    csrc/generated/sha256.c
    csrc/generated/sha512.c
    csrc/generated/x25519.c

executable umbravox
  import:           warnings, lang
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    base         >= 4.18  && < 5,
    bytestring   >= 0.11  && < 0.13,
    containers   >= 0.6   && < 0.8,
    directory    >= 1.3   && < 1.4,
    filepath     >= 1.4   && < 1.6,
    network      >= 3.1   && < 3.3,
    unix         >= 2.8   && < 2.9,
    UmbraVox
  ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"

executable codegen
  import:           warnings, lang
  main-is:          Main.hs
  hs-source-dirs:   codegen
  other-modules:
    CryptoGen
    CBORGen
    FSMGen
    TestGen
  build-depends:
    base         >= 4.18  && < 5,
    bytestring   >= 0.11  && < 0.13,
    containers   >= 0.6   && < 0.8,
    directory    >= 1.3   && < 1.4,
    filepath     >= 1.4   && < 1.6

executable check-complexity
  import:           warnings, lang
  main-is:          Main.hs
  hs-source-dirs:   scripts/check-complexity
  build-depends:
    base         >= 4.18  && < 5,
    UmbraVox
  ghc-options:      -threaded

executable fstar-verify
  import:           warnings, lang
  main-is:          Main.hs
  hs-source-dirs:   scripts/fstar-verify
  build-depends:
    base         >= 4.18  && < 5,
    UmbraVox
  ghc-options:      -threaded

executable fetch-references
  import:           warnings, lang
  main-is:          Main.hs
  hs-source-dirs:   scripts/fetch-references
  build-depends:
    base         >= 4.18  && < 5,
    directory    >= 1.3   && < 1.4,
    UmbraVox
  ghc-options:      -threaded

test-suite umbravox-test
  import:           warnings, lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test, codegen
  other-modules:
    Test.Util
    Test.App.Startup
    Test.Harness
    Test.EndToEnd
    Test.EndToEnd2
    Test.Crypto.SHA256
    Test.Crypto.SHA512
    Test.Crypto.HMAC
    Test.Crypto.HKDF
    Test.Crypto.AES
    Test.Crypto.GCM
    Test.Crypto.Curve25519
    Test.Crypto.Ed25519
    Test.Crypto.ChaCha20
    Test.Crypto.Signal.X3DH
    Test.Crypto.Signal.DoubleRatchet
    Test.Crypto.Keccak
    Test.Crypto.MLKEM
    Test.Crypto.Poly1305
    Test.Security
    Test.Fuzz
    Test.FuzzInputs
    Test.FuzzConnection
    Test.Hardening.TCP
    Test.Hardening.Fault
    Test.Hardening.Recovery
    Test.Hardening.Soak
    Test.Integration
    Test.Equivalence
    Test.Network.Transport
    Test.Network.TransportClass
    Test.Network.Transport.Loopback
    Test.Network.TransportEdge
    Test.Protocol.CBOR
    Test.Crypto.BIP39
    Test.Crypto.Export
    Test.Protocol.QRCode
    Test.Network.Noise
    Test.Chat.Session
    Test.Chat.WireEdge
    Test.Crypto.StealthAddress
    Test.Network.PeerExchange
    Test.Protocol.SafetyNumber
    Test.Protocol.MessageFormat
    Test.Protocol.WireFormat
    Test.Crypto.PQXDH
    Test.Crypto.Random
    Test.Crypto.VRF
    Test.Crypto.PQWrapper
    Test.Crypto.KeyStore
    Test.Crypto.Signal.SenderKeys
    Test.Crypto.Signal.Session
    Test.Storage.Anthony
    Test.Storage.ChainDB
    Test.Storage.StateDB
    Test.Storage.Index
    Test.Storage.Checkpoint
    Test.Network.MDNS
    Test.Network.Protocol
    Test.CryptoIntegrity
    Test.Chat.Message
    Test.Chat.Transaction
    Test.Chat.Contacts
    Test.Chat.API
    Test.Codegen
    Test.TUI.Types
    Test.TUI.Render
    Test.TUI.Input
    Test.TUI.Handshake
    Test.TUI.HandshakeEdge
    Test.TUI.Actions
    Test.TUI.Paths
    Test.TUI.Sim.Util
    Test.TUI.Sim.Contacts
    Test.TUI.Sim.Chat
    Test.TUI.Sim.Focus
    Test.TUI.Sim.Shortcuts
    Test.TUI.Sim.Menu
    Test.TUI.Sim.Dialogs
    Test.TUI.Sim.SettingsEdge
    Test.TUI.Sim.Workflows
    Test.TUI.Sim.Runtime
    Test.TUI.Sim.MessageFlow
    Test.Tools.Complexity
    Test.Tools.FStarVerify
    Test.Tools.FetchReferences
    Test.Consensus.Types
    Test.Consensus.Block
    Test.Consensus.Ledger
    Test.Consensus.Mempool
    Test.Consensus.Validation
    Test.Consensus.ForkChoice
    Test.Consensus.Nonce
    Test.Consensus.LeaderElection
    Test.Consensus.Protocol
    Test.Consensus.Truncation
    Test.Economics.Token
    Test.Economics.Fees
    Test.Economics.Rewards
    Test.Economics.Penalty
    Test.Economics.Cycle
    Test.Economics.Onboarding
    CryptoGen
  build-depends:
    base         >= 4.18  && < 5,
    bytestring   >= 0.11  && < 0.13,
    array        >= 0.5   && < 0.6,
    containers   >= 0.6   && < 0.8,
    network      >= 3.1   && < 3.3,
    directory    >= 1.3   && < 1.4,
    filepath     >= 1.4   && < 1.6,
    process      >= 1.6   && < 1.7,
    text         >= 2.0   && < 2.2,
    unix         >= 2.8   && < 2.9,
    UmbraVox
  ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"
