cabal-version:      3.0
name:               UmbraVox
version:            0.4.4
synopsis:           Decentralized encrypted communications protocol
description:
  UmbraVox is a research-oriented encrypted messaging project with
  post-quantum cryptography, preserved blockchain-facing design work,
  and a Haskell-first runtime backed by handwritten F* formal models.
  The current assurance boundary and trust gaps are documented in
  README.md and doc/assurance-matrix.md.
license:            Apache-2.0
license-file:       LICENSE
build-type:         Simple

flag pure-haskell
  description: Use pure Haskell reference implementations (no FFI C)
  default:     True
  manual:      True

flag pure-haskell-crypto
  description: Use pure Haskell crypto (NOT constant-time). Disable for FFI to C.
  default:     False
  manual:      True

flag profiling
  description: Enable GHC cost-centre profiling annotations
  default:     False
  manual:      True

flag coverage
  description: Enable HPC instrumentation for MC/DC coverage
  default:     False
  manual:      True

flag chaste-build
  description: Compile an ephemeral-only client with persistence/discovery features removed from the runtime surface
  default:     False
  manual:      True

flag wasm
  description: Build only pure crypto core (no network/TUI/storage). For use with wasm32-wasi-ghc via ghc-wasm-meta.
  default:     False
  manual:      True

flag stubs
  description: Include unimplemented stub modules (consensus, economics, etc.)
  default:     True
  manual:      True

common warnings
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies
    -Wpartial-fields
    -Wredundant-constraints
    -Wunused-packages

common lang
  default-language:   Haskell2010
  default-extensions:
    BangPatterns
    DeriveGeneric
    DerivingStrategies
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    StrictData
    TypeApplications

library
  import:           warnings, lang
  hs-source-dirs:   src
  -- Modules included unconditionally: pure crypto core, safe for WASM target.
  -- See doc/WASM-TARGET.md and the 'wasm' flag below.
  exposed-modules:
    -- Crypto primitives (pure; WASM-eligible)
    UmbraVox.Crypto.SecureBytes
    UmbraVox.Crypto.Warning
    UmbraVox.Crypto.SHA256
    UmbraVox.Crypto.SHA512
    UmbraVox.Crypto.HMAC
    UmbraVox.Crypto.HKDF
    UmbraVox.Crypto.AES
    UmbraVox.Crypto.GCM
    UmbraVox.Crypto.Curve25519
    UmbraVox.Crypto.Ed25519
    UmbraVox.Crypto.Keccak
    UmbraVox.Crypto.Poly1305
    UmbraVox.Crypto.ChaChaPoly
    UmbraVox.Crypto.MLKEM
    UmbraVox.Crypto.ConstantTime
    UmbraVox.Crypto.BIP39
    -- Signal protocol core (pure transforms; WASM-eligible)
    UmbraVox.Crypto.Signal.X3DH
    UmbraVox.Crypto.Signal.PQXDH
    UmbraVox.Crypto.Signal.DoubleRatchet
    -- Pure serialization (WASM-eligible)
    UmbraVox.Protocol.Encoding
    UmbraVox.Protocol.CBOR
    -- Version
    UmbraVox.Version
  if !flag(wasm)
    exposed-modules:
      -- Crypto (IO / FFI-backed; not pure WASM)
      UmbraVox.Crypto.VRF
      UmbraVox.Crypto.Random
      UmbraVox.Crypto.StealthAddress
      UmbraVox.Crypto.Export
      UmbraVox.Crypto.RatchetPersist
      UmbraVox.Crypto.PQWrapper
      UmbraVox.Crypto.KeyStore
      UmbraVox.Crypto.SecureFd
      UmbraVox.Crypto.Signal.SenderKeys
      UmbraVox.Crypto.Signal.Session
      UmbraVox.Crypto.Signal.Compat
      UmbraVox.Protocol.SignalWire
      -- Active generated coverage spans the preserved Haskell, C, and FFI
      -- namespaces. Generated C and FFI paths are linked through truthful
      -- bridge wrappers plus compile/link probes.
      UmbraVox.Crypto.Generated.AES256
      UmbraVox.Crypto.Generated.ChaCha20
      UmbraVox.Crypto.Generated.HKDF
      UmbraVox.Crypto.Generated.HMAC
      UmbraVox.Crypto.Generated.Keccak
      UmbraVox.Crypto.Generated.MLKEM768
      UmbraVox.Crypto.Generated.Poly1305
      UmbraVox.Crypto.Generated.SHA256
      UmbraVox.Crypto.Generated.SHA512
      UmbraVox.Crypto.Generated.X25519
      UmbraVox.Crypto.Generated.VRF
      UmbraVox.Crypto.Generated.PQWrapper
      UmbraVox.Crypto.Generated.MessageFormat
      UmbraVox.Crypto.Generated.WireFormat
      UmbraVox.Crypto.Generated.Ed25519Extended
      UmbraVox.Crypto.Generated.Dandelion
      UmbraVox.Crypto.Generated.NetworkProtocol
      UmbraVox.Crypto.Generated.SessionState
      UmbraVox.Crypto.Generated.FFI.AES256
      UmbraVox.Crypto.Generated.FFI.ChaCha20
      UmbraVox.Crypto.Generated.FFI.HKDF
      UmbraVox.Crypto.Generated.FFI.HMAC
      UmbraVox.Crypto.Generated.FFI.Keccak
      UmbraVox.Crypto.Generated.FFI.MLKEM768
      UmbraVox.Crypto.Generated.FFI.Poly1305
      UmbraVox.Crypto.Generated.FFI.SHA256
      UmbraVox.Crypto.Generated.FFI.SHA512
      UmbraVox.Crypto.Generated.FFI.X25519
      UmbraVox.Crypto.Generated.FFI.VRF
      UmbraVox.Crypto.Generated.FFI.PQWrapper
      UmbraVox.Crypto.Generated.FFI.MessageFormat
      UmbraVox.Crypto.Generated.FFI.WireFormat
      UmbraVox.Crypto.Generated.FFI.Ed25519Extended
      UmbraVox.Crypto.Generated.FFI.Dandelion
      UmbraVox.Crypto.Generated.FFI.NetworkProtocol
      UmbraVox.Crypto.Generated.FFI.SessionState
      -- Network
      UmbraVox.Network.TransportClass
      UmbraVox.Network.Transport
      UmbraVox.Network.Transport.Loopback
      UmbraVox.Network.Transport.Intercept
      UmbraVox.Network.Transport.UDP
      UmbraVox.Network.Transport.Blockchain
      UmbraVox.Network.Transport.SignalServer
      UmbraVox.Network.Transport.XMPP
      UmbraVox.Network.Transport.Discord
      UmbraVox.Network.Transport.Matrix
      UmbraVox.Network.Transport.Socks5
      UmbraVox.Network.ProviderCatalog
      UmbraVox.Network.ProviderRuntime
      UmbraVox.Network.Noise
      UmbraVox.Network.Noise.State
      UmbraVox.Network.Noise.Handshake
      UmbraVox.Network.PeerManager
      UmbraVox.Network.Gossip
      UmbraVox.Network.Dandelion
      UmbraVox.Network.RateLimit
      UmbraVox.Network.Protocol
      UmbraVox.Network.Sync
      UmbraVox.Network.MDNS
      UmbraVox.Network.PeerExchange
      UmbraVox.Network.Presence
      UmbraVox.Network.Discovery
      UmbraVox.Network.DHT.Types
      UmbraVox.Network.DHT.RoutingTable
      UmbraVox.Network.DHT.RPC
      UmbraVox.Network.DHT.Lookup
      UmbraVox.Network.DHT.Store
      UmbraVox.Network.DHT
      UmbraVox.Network.Relay
      UmbraVox.Network.Listener
      -- App / Config
      UmbraVox.App.Config
      UmbraVox.App.ConfigFile
      UmbraVox.App.Defaults
      UmbraVox.App.State
      UmbraVox.App.Types
      -- Chat
      UmbraVox.App.RuntimeLog
      UmbraVox.App.Startup
      UmbraVox.App.SwapCheck
      UmbraVox.BuildProfile
      -- Plugin framework
      UmbraVox.Plugin.Types
      UmbraVox.Plugin.Registry
      UmbraVox.Chat.Wire
      UmbraVox.Chat.Session
      UmbraVox.Chat.Message
      UmbraVox.Chat.Transaction
      UmbraVox.Chat.Contacts
      UmbraVox.Chat.API
      UmbraVox.Chat.OutboundQueue
      -- Storage
      UmbraVox.Storage.Class
      UmbraVox.Storage.InMemory
      UmbraVox.Storage.AnthonyAdapter
      UmbraVox.Storage.ChainDB
      UmbraVox.Storage.StateDB
      UmbraVox.Storage.Index
      UmbraVox.Storage.Checkpoint
      UmbraVox.Storage.Schema
      UmbraVox.Storage.Encryption
      UmbraVox.Storage.SQLite3
      UmbraVox.Storage.Anthony
      -- Protocol / Serialization (remainder)
      UmbraVox.Protocol.UTF8
      UmbraVox.Protocol.MessageFormat
      UmbraVox.Protocol.QRCode
      UmbraVox.Protocol.ProofOfWork
      UmbraVox.Protocol.RouteToken
      UmbraVox.Protocol.WireFormat
      UmbraVox.Protocol.Handshake
      -- TUI
      UmbraVox.TUI.Types
      UmbraVox.TUI.Constants
      UmbraVox.TUI.Text
      UmbraVox.TUI.InputBuffer
      UmbraVox.TUI.RichText
      UmbraVox.TUI.PaginatedList
      UmbraVox.TUI.Terminal
      UmbraVox.TUI.Layout
      UmbraVox.TUI.LayoutGrid
      UmbraVox.TUI.Dialog
      UmbraVox.TUI.EmojiPicker
      UmbraVox.TUI.Menu
      UmbraVox.TUI.RuntimeCommand
      UmbraVox.TUI.RuntimeEvent
      UmbraVox.TUI.RuntimeNetwork
      UmbraVox.TUI.RuntimeSettings
      UmbraVox.TUI.Render
      UmbraVox.TUI.Input
      UmbraVox.TUI.Actions
      UmbraVox.TUI.Actions.Session
      UmbraVox.TUI.Actions.Export
      UmbraVox.TUI.Handshake
      -- Tools
      UmbraVox.Tools.Complexity
      UmbraVox.Tools.FStarVerify
      UmbraVox.Tools.FetchReferences
      UmbraVox.Tools.ReleaseBridge
      UmbraVox.Tools.Compliance
      UmbraVox.Tools.Provenance
      UmbraVox.Tools.PcapVerify
      -- Bridge plugins
      UmbraVox.Bridge.Signal.Registration
      UmbraVox.Bridge.Signal.Session
      UmbraVox.Bridge.Signal.WebSocket
      UmbraVox.Bridge.UmbraClaw.Main
      UmbraVox.Bridge.UmbraClaw.Session
      -- Headless runtime
      UmbraVox.Runtime.Headless
  build-depends:
    base         >= 4.18  && < 5,
    bytestring   >= 0.11  && < 0.13,
    containers   >= 0.6   && < 0.8,
    array        >= 0.5   && < 0.6,
    stm          >= 2.5   && < 2.6,
    text         >= 2.0   && < 2.2
  if !flag(wasm)
    build-depends:
      network      >= 3.1   && < 3.3,
      directory    >= 1.3   && < 1.4,
      filepath     >= 1.4   && < 1.6,
      time         >= 1.12  && < 1.15,
      process      >= 1.6   && < 1.7,
      unix         >= 2.8   && < 2.9
    pkgconfig-depends: sqlite3
    c-sources:
      csrc/secure_zero.c
      csrc/secure_mlock.c
      csrc/sqlite3_shim.c
      csrc/generated/aes256.c
      csrc/generated/chacha20.c
      csrc/generated/hkdf.c
      csrc/generated/hmac.c
      csrc/generated/keccak.c
      csrc/generated/mlkem768.c
      csrc/generated/poly1305.c
      csrc/generated/sha256.c
      csrc/generated/sha512.c
      csrc/generated/x25519.c
      csrc/generated/vrf.c
      csrc/generated/pqwrapper.c
      csrc/generated/messageformat.c
      csrc/generated/wireformat.c
      csrc/generated/ed25519extended.c
      csrc/generated/dandelion.c
      csrc/generated/networkprotocol.c
      csrc/generated/sessionstate.c
      csrc/constant_time.c
    cc-options: -fstack-protector-strong -D_FORTIFY_SOURCE=2 -Wformat -Wformat-security
  if !flag(wasm) && flag(stubs)
    exposed-modules:
      -- Consensus (stub / deferred)
      UmbraVox.Consensus.Types
      UmbraVox.Consensus.Block
      UmbraVox.Consensus.Ledger
      UmbraVox.Consensus.Protocol
      UmbraVox.Consensus.LeaderElection
      UmbraVox.Consensus.Validation
      UmbraVox.Consensus.ForkChoice
      UmbraVox.Consensus.Nonce
      UmbraVox.Consensus.Truncation
      UmbraVox.Consensus.Mempool
      -- Economics (stub / deferred)
      UmbraVox.Economics.Token
      UmbraVox.Economics.Fees
      UmbraVox.Economics.Rewards
      UmbraVox.Economics.Penalty
      UmbraVox.Economics.Cycle
      UmbraVox.Economics.Onboarding
    cpp-options: -DSTUBS
  if flag(pure-haskell-crypto)
    cpp-options: -DPURE_HASKELL_CRYPTO
  if flag(chaste-build)
    cpp-options: -DCHASTE_BUILD
  if flag(wasm)
    cpp-options: -DWASM_BUILD

executable umbravox
  import:           warnings, lang
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    base         >= 4.18  && < 5,
    unix         >= 2.8   && < 2.9,
    UmbraVox
  ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"

executable umbravox-headless
  import:           warnings, lang
  main-is:          Headless.hs
  hs-source-dirs:   app
  build-depends:
    base         >= 4.18  && < 5,
    UmbraVox
  ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"

executable codegen
  import:           warnings, lang
  main-is:          Main.hs
  hs-source-dirs:   codegen
  other-modules:
    CryptoGen
    CBORGen
    FSMGen
    TestGen
  build-depends:
    base         >= 4.18  && < 5,
    directory    >= 1.3   && < 1.4,
    filepath     >= 1.4   && < 1.6

executable check-complexity
  import:           warnings, lang
  main-is:          Main.hs
  hs-source-dirs:   scripts/check-complexity
  build-depends:
    base         >= 4.18  && < 5,
    UmbraVox
  ghc-options:      -threaded

executable fstar-verify
  import:           warnings, lang
  main-is:          Main.hs
  hs-source-dirs:   scripts/fstar-verify
  build-depends:
    base         >= 4.18  && < 5,
    directory    >= 1.3   && < 1.4,
    filepath     >= 1.4   && < 1.6,
    process      >= 1.6   && < 1.7,
    UmbraVox
  ghc-options:      -threaded

executable fetch-references
  import:           warnings, lang
  main-is:          Main.hs
  hs-source-dirs:   scripts/fetch-references
  build-depends:
    base         >= 4.18  && < 5,
    directory    >= 1.3   && < 1.4,
    UmbraVox
  ghc-options:      -threaded

executable umbravox-signal-bridge
  import:           warnings, lang
  main-is:          Main.hs
  hs-source-dirs:   app-signal-bridge
  build-depends:
    base         >= 4.18  && < 5,
    bytestring   >= 0.11  && < 0.13,
    UmbraVox
  ghc-options:      -threaded

executable umbravox-umbraclaw
  import:           warnings, lang
  main-is:          Main.hs
  hs-source-dirs:   app-umbraclaw
  build-depends:
    base         >= 4.18  && < 5,
    UmbraVox
  ghc-options:      -threaded

test-suite umbravox-test
  import:           warnings, lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test, codegen
  other-modules:
    Test.Util
    Test.App.Startup
    Test.App.RuntimeLog
    Test.Harness
    Test.EndToEnd
    Test.EndToEnd2
    Test.Crypto.SHA256
    Test.Crypto.SHA512
    Test.Crypto.HMAC
    Test.Crypto.HKDF
    Test.Crypto.AES
    Test.Crypto.GCM
    Test.Crypto.Curve25519
    Test.Crypto.Differential
    Test.Crypto.Differential.Primitives
    Test.Crypto.Differential.Negative
    Test.Crypto.Differential.Metamorphic
    Test.Crypto.Differential.Fuzz
    Test.Crypto.Differential.ProtocolLibsignal
    Test.Crypto.Differential.ProtocolSelfConsistency
    Test.Crypto.Differential.Evidence
    Test.Crypto.SignalCompat
    Test.Crypto.Ed25519
    Test.Crypto.ChaCha20
    Test.Crypto.Signal.X3DH
    Test.Crypto.Signal.DoubleRatchet
    Test.Crypto.RatchetPersist
    Test.Crypto.SecureBytes
    Test.Crypto.Keccak
    Test.Crypto.MLKEM
    Test.Crypto.Poly1305
    Test.Security
    Test.Fuzz
    Test.FuzzInputs
    Test.FuzzConnection
    Test.Hardening.TCP
    Test.Hardening.Fault
    Test.Hardening.Recovery
    Test.Hardening.Soak
    Test.Integration
    Test.Equivalence
    Test.Network.Transport
    Test.Network.TransportClass
    Test.Network.Transport.Loopback
    Test.Network.TransportEdge
    Test.Network.UDP
    Test.Network.Socks5Live
    Test.Network.DoSMitigation
    Test.Protocol.CBOR
    Test.Crypto.BIP39
    Test.Crypto.Export
    Test.Protocol.QRCode
    Test.Network.Noise
    Test.Chat.Session
    Test.Chat.Wire
    Test.Chat.WireEdge
    Test.Crypto.StealthAddress
    Test.Network.PeerExchange
    Test.Protocol.SafetyNumber
    Test.Protocol.MessageFormat
    Test.Protocol.WireFormat
    Test.Protocol.RouteToken
    Test.Crypto.PQXDH
    Test.Crypto.Random
    Test.Crypto.VRF
    Test.Crypto.PQWrapper
    Test.Crypto.KeyStore
    Test.Crypto.Signal.SenderKeys
    Test.Crypto.Signal.Session
    Test.Crypto.SignalWireCompat
    Test.Plugin.Registry
    Test.Plugin.EphemeralIntegration
    Test.Storage.Anthony
    Test.Storage.Encryption
    Test.Storage.ChainDB
    Test.Storage.StateDB
    Test.Storage.Index
    Test.Storage.Checkpoint
    Test.Network.DHT
    Test.Network.MDNS
    Test.Network.Protocol
    Test.CryptoIntegrity
    Test.Chat.Message
    Test.Chat.Transaction
    Test.Chat.Contacts
    Test.Chat.API
    Test.Chat.OutboundQueue
    Test.Codegen
    Test.TUI.Types
    Test.TUI.Render
    Test.TUI.Input
    Test.TUI.Handshake
    Test.TUI.HandshakeEdge
    Test.TUI.Actions
    Test.TUI.Paths
    Test.TUI.Sim.Util
    Test.TUI.Sim.Contacts
    Test.TUI.Sim.Chat
    Test.TUI.Sim.Focus
    Test.TUI.Sim.Shortcuts
    Test.TUI.Sim.Menu
    Test.TUI.Sim.Dialogs
    Test.TUI.Sim.SettingsEdge
    Test.TUI.Sim.Workflows
    Test.TUI.Sim.Runtime
    Test.TUI.Sim.MessageFlow
    Test.Tools.Complexity
    Test.Tools.FStarVerify
    Test.Tools.FetchReferences
    Test.Security.Adversarial
    Test.Security.M11KeyMgmt
    Test.Security.M11Protocol
    Test.Security.Regression
    Test.Security.RegressionM7
    Test.Security.RegressionM8
    Test.Security.RegressionNet
    Test.Security.Unicode
    Test.Security.M11Symmetric
    Test.Security.M11Asymmetric
    Test.Security.M11SideChannel
    Test.Security.M11High
    Test.Security.M11HighAuth
    Test.Security.M11NoiseDH
    Test.Security.M11HighFS
    Test.Security.M11HighProto
    Test.Security.M11HighKeyImpl
    Test.Security.M11HighSymHash
    Test.Security.M11HighPQ
    Test.Security.M11HighPQHash
    Test.Security.M11Medium
    Test.Security.M11HighSC2
    Test.Security.M11HighAS2
    Test.Security.M11HighRemaining
    Test.Security.M11HighSMFSIA
    Test.Security.M11HighCrypto3
    Test.Security.M11HighKM3
    Test.Security.M11Final
    Test.Security.MCDC
    Test.Bridge.UmbraClaw
    CryptoGen
  if flag(stubs)
    other-modules:
      Test.Consensus.Types
      Test.Consensus.Block
      Test.Consensus.Ledger
      Test.Consensus.Mempool
      Test.Consensus.Validation
      Test.Consensus.ForkChoice
      Test.Consensus.Nonce
      Test.Consensus.LeaderElection
      Test.Consensus.Protocol
      Test.Consensus.Truncation
      Test.Economics.Token
      Test.Economics.Fees
      Test.Economics.Rewards
      Test.Economics.Penalty
      Test.Economics.Cycle
      Test.Economics.Onboarding
    cpp-options: -DSTUBS
  build-depends:
    base         >= 4.18  && < 5,
    bytestring   >= 0.11  && < 0.13,
    array        >= 0.5   && < 0.6,
    containers   >= 0.6   && < 0.8,
    network      >= 3.1   && < 3.3,
    directory    >= 1.3   && < 1.4,
    filepath     >= 1.4   && < 1.6,
    process      >= 1.6   && < 1.7,
    text         >= 2.0   && < 2.2,
    unix         >= 2.8   && < 2.9,
    UmbraVox
  ghc-options:      -threaded -rtsopts "-with-rtsopts=-N"
